tests/js/error/semantics/NYI_getBase2.js
// <>getBase, LookupBase, ProtoBase 
var __result1 = toString(); // need built-in function
var __expect1 = __StrTop;
